dgana_fadly done all release

--- a/views/pages/result.ejs
+++ b/views/pages/result.ejs
@@ -3,10 +3,10 @@
   <div class="row">
     <h1>Anagrams</h1>
     <br>
-    <form action="/anagram" method="get">
+    <form action="/" method="post">
       <div class="form-group">
         <label for="anagram">Input Anagram: </label>
-        <input type="text" class="form-control" name="word_input" id="anagram" value="asdasdas" placeholder="Your Input">
+        <input type="text" class="form-control" name="word_input" id="anagram" value="" placeholder="Your Anagram Input">
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
