--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,7 +6,7 @@
     <form action="/" method="post">
       <div class="form-group">
         <label for="anagram">Input Anagram: </label>
-        <input type="text" class="form-control" name="word_input" id="anagram" value="asdasdas" placeholder="Your Input">
+        <input type="text" class="form-control" name="word_input" id="anagram" value="" placeholder="Your Anagram Input">
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
